[package]
name = "tuilet"
version = "0.1.1"
edition = "2021"
authors = ["pete gamache <pete@gamache.org>"]
description = "A textual user interface for Toilet, the ANSI-art text generator"
homepage = "https://github.com/gamache/tuilet"
repository = "https://github.com/gamache/tuilet"
keywords = ["ansi", "toilet", "figlet", "ascii", "ascii art"]
categories = ["text-processing", "command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["cargo"] }
ratatui = "0.28.1"
regex = "1.10.6"
tui-textarea = "0.6.1"

[[bin]]
name = "tuilet"
path = "src/main.rs"
doc = false
